Owner is able to get the maintenance