@@ -1,6 +1,5 @@
 package com.society.management.security;
 
-import com.society.management.entity.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -12,34 +11,35 @@ public class CustomUserDetails implements UserDetails {
 
     private final Long userId;
     private final String email;
-    private final String password;
     private final String role;
-    private final Long societyId;
 
-    public CustomUserDetails(User user) {
-        this.userId = user.getUserId();
-        this.email = user.getEmail();
-        this.password = user.getPassword();
-        this.role = user.getRole().name();
-        this.societyId =
-                user.getSociety() != null ? user.getSociety().getSocietyId() : null;
+    public CustomUserDetails(Long userId, String email, String role) {
+        this.userId = userId;
+        this.email = email;
+        this.role = role;
+    }
+
+    public Long getUserId() {
+        return userId;
+    }
+
+    public String getRole() {
+        return role;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return java.util.Collections.singletonList(
-            new SimpleGrantedAuthority("ROLE_" + role)
-        );
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role));
     }
 
-    @Override public String getUsername() { return email; }
-    @Override public String getPassword() { return password; }
+    @Override
+    public String getUsername() {
+        return email;
+    }
+
+    @Override public String getPassword() { return null; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled() { return true; }
-
-    public Long getUserId() { return userId; }
-    public Long getSocietyId() { return societyId; }
 }
-
